# IBM-AI-Engineering

./: .gitignore  README.md  ipynb_to_md.py  ipynb_to_pdf.py  pyproject.toml
01. Machine Learning/Labs/: ML0101EN-Reg-Simple-Linear-Regression-Co2.md
03. DL With Keras/Labs/: Final Proj-Classify Waste Products Using TL- FT-v1.ipynb
04. Intro To DL With PyTorch/Labs/: 2.2_linear_regression_one_parameter_v3.ipynb  2.2_linear_regression_one_parameter_v3.md  2.3_training_slope_and_bias_v3.ipynb  3.3_PyTorchway_v3.ipynb  Final Project League of Legends Match Predictor-v2.ipynb  Final Project League of Legends Match Predictor-v2.md  Final_Project_League_of_Legends_Match_Predictor_v2_colab.ipynb  final_project_league_of_legends_match_predictor_v2.py
05. DL With PyTorch/Labs/: 5.2.2bad_inshilization_logistic_regression_with_mean_square_error_v2 (1).ipynb  5.2.2bad_inshilization_logistic_regression_with_mean_square_error_v2 (1).md  5.3_cross_entropy_logistic_regression_v2 (1).ipynb  5.3_cross_entropy_logistic_regression_v2 (1).md  5.4softmax_in_one_dimension_v2.ipynb  6.2lab_predicting _MNIST_using_Softmax_v2.ipynb  7.1_simple1hiddenlayer.ipynb  7.1_simple1hiddenlayer.md  7.2multiple_neurons.ipynb  7.3xor_v2.ipynb  7.5.1activationfuction_v2.ipynb  (+2 more)
09. GenAI Language Modeling/: 40p3EvQt3-k_IUPsxCQO2g.ipynb
14. Assignments/: 01. Regression Model with Keras.ipynb  01. Regression Model with Keras.md  02. Fine-Tuning Tensorflow.ipynb  02. Fine-Tuning Tensorflow.md  03. Linear Regression - PyTorch.ipynb
15. Graded Quizzes/: 04. PyTorch Basics.ipynb  04. PyTorch Basics.md
(+187 files in other folders)
